# mada_sync

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
mada/: app.py  database.py  models.py  schemas.py  security.py
mada/routers/: autor.py  livro.py  users.py
migrations/: env.py
migrations/versions/: 7856d283e6b0_initial_migration.py
tests/: test_app.py
